# TheOregonTrail

./: .clang-format  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  DPK 999.sln  Project1.vcxproj  Project1.vcxproj.filters  README.md  VersionInfo.h  VersionResource.rc  ansi_codes.h  base.h  constants.h  default.nix  example.txt  input.c  input.h  main.c  main.h  map.c  map_data.h  planning.md  readme.md  settings.c  settings.h  setup.h  state.c  state.h  static.c  static.h  store.c  store.h  tui.c  tui.h  utils.c  utils.h
cmake/: VersionResource.rc  generate_product_version.cmake
include/: ansi_codes.h  base.h  discord.h  formatted_lines.h  input.h  licenses.h  main.h  map.h  map_data.h  music.h  screens.h  settings.h  setup.h  state.h  static.h  store.h  store_data.h  tui.h  utils.h
include/blackjack/: card.h  game.h
lib/: nfd.lib
libs/: cvector.h
resources/: tot.xcf
src/: CMakeLists.txt  ansi_codes.c  base.c  discord.c  formatted_lines.c  input.c  main.c  map.c  music.c  settings.c  setup.c  state.c  static.c  store.c  store_data.c  tracks.c  tui.c  utils.c
src/blackjack/: card.c  game.c
src/screens/: general_store.c  learn.c  main_settings.c  map.c  map_data.c  prepare.c  trail.c
